# Medusa

./: pyproject.toml
medusa/model/: medusa_model.py  modeling_llama_kv.py
notebooks/: medusa_introduction.ipynb
notebooks/test/: medusa_test.py
