[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medusa-llm"
version = "1.0"
description = "Simple Framework for Accelerating LLM Generation with Multiple Decoding Heads"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "fschat",
    "torch",
    "transformers>=4.34",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "notebook>=7.4.5",
    "matplotlib>=3.9.4",
    "flash-attn>=2.8.3",
]

[project.optional-dependencies]
train = ["bitsandbytes", "wandb", "scipy"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.urls]
"Homepage" = "https://github.com/FasterDecoding/Medusa"
"Blog" = "https://sites.google.com/view/medusa-llm"

[tool.setuptools.packages.find]
exclude = ["assets*", "notebooks*", "scripts*", "llm_judge"]
